--- a/man/pamgetcolor.1
+++ b/man/pamgetcolor.1
@@ -83,7 +83,7 @@ of four pixels and the center at (100,100):
 This specifies the format in which to output the colors.  The output is
 always a 
 .UR libppm.html#colorname
-Netpbm oclor specification
+Netpbm color specification
 .UE
 \&; this
 format tells which of the various specifications for the same color the
