--- a/man/ppmbrighten.1
+++ b/man/ppmbrighten.1
@@ -135,6 +135,8 @@ with a bogus error message.
 \&, 
 .BR "ppmflash" (1)\c
 \&, 
+.BR "pamaltsat" (1)\c
+\&, 
 .BR "pamdepth" (1)\c
 \&, 
 .BR "pnmgamma" (1)\c
