--- a/doc/HISTORY
+++ b/doc/HISTORY
@@ -4,16 +4,53 @@ Netpbm.
 CHANGE HISTORY 
 --------------
 
-18.09.08 BJH  Release 10.83.02
+not yet  BJH  Release 10.84.02
 
-              pamgetcolor: fix bug: gets color of only the top half of a
-              region.
+              libnetpbm: Fix invalid memory reference in color name processing
+              when trivial memory allocation fails.
 
-18.07.07 BJH  Release 10.83.01
+              Build: fix reference to nonexistent getline on Mac OS X 10.6.
+
+              Build: fix reference to nonexistent strndup on Mac OS X 10.6.
+
+18.10.02 BJH  Release 10.84.01
+
+              pamtojpeg2k: fix incorrect interpretation of -ilyrrates option
+              when it contains multiple delimiter characters in a row.  Always
+              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).
+
+              pnmtojbig: fix incorrect handling of -x option.  Always broken
+              (pnmtojbig was new in Netpbm 9.2 (May 2000)).
+
+              Build: fix reference to nonexistent strndup on Mac OS X 10.6.
+
+18.09.29 BJH  Release 10.84.00
+
+              Add pamaltsat.  Thanks Anton Shepelev <anton.txt@gmail.com>.
+
+              Add pamtris.  Thanks Lucas Brunno Luna
+              <lucaslunar32@hotmail.com>.
+
+              libpbmfont, pbmtext: fix bugs with BDF file lines with
+              insufficient number of fields.  Unknown effect.
+
+              pbmtext: -wchar works with built-in fonts.
+
+              pbmtext: improved -verbose information about BDF fonts:
+              include CHARSET_REGISTRY, CHARSET_ENCODING.
+
+              libnetpbm font facilities: built-in fonts work with wide
+              characters.
 
               pbmtext; libnetpbm BDF font processing: fix invalid memory
               reference when BDF font file has invalid syntax.  Broken
               in primordial Netpbm, ca 1993.
+
+              pamgetcolor: fix bug: gets color of only the top half of a
+              region.
+
+              pnmfiasco, fiascotopnm: Fix trivial memory leak.  Always broken
+              (programs were new in Netpbm 9.6, July 2000).
 
 18.06.30 BJH  Release 10.83.00
 
