--- a/man/pamcomp.1
+++ b/man/pamcomp.1
@@ -303,6 +303,10 @@ faster than \fBpamcomp\fP in doing the conversion.
 .UN seealso
 .SH SEE ALSO
 .PP
+.BR "pammixmulti.html" (1)\c
+\& mixes together
+two or more images of the same size, in various ways.
+.PP
 .BR "ppmmix" (1)\c
 \& and
 .BR "pnmpaste" (1)\c
