--- a/man/tgatoppm.1
+++ b/man/tgatoppm.1
@@ -37,7 +37,7 @@ All options can be abbreviated to their shortest unique prefix.
 .TP
 \fB--alphaout=\fP\fIalpha-filename\fP
 \fBtgatoppm \fP creates a PGM image containing the transparency channel
-values in the input image.  If the input image doesn't contain an
+values in the input image.  If the input image doesn't contain a
 transparency channel, the \fIalpha-filename\fP file contains all zero
 (transparent) transparency values.  If you don't specify \fB--alphaout\fP,
 \fBtgatoppm\fP does not generate an alpha file, and if the input
