--- a/man/pamcut.1
+++ b/man/pamcut.1
@@ -28,6 +28,14 @@ pamcut - cut a rectangle out of a PAM, PBM, PGM, or PPM image
 
 [\fB-pad\fP]
 
+[\fB-cropleft \fP\fInumcols\fP]
+
+[\fB-cropright \fP\fInumcols\fP]
+
+[\fB-croptop \fP\fInumrows\fP]
+
+[\fB-cropbottom \fP\fInumrows\fP]
+
 [\fB-verbose\fP]
 
 [\fIleft\fP \fItop\fP \fIwidth\fP \fIheight\fP]
@@ -50,26 +58,37 @@ This program is part of
 extracts the specified rectangle, and produces the same kind of image
 as output.
 .PP
-There are two ways to specify the rectangle to cut: arguments and
-options.  Options are easier to remember and read, more expressive,
-and allow you to use defaults.  Arguments were the only way available
-before July 2000.
+You can specify either the rectangle to cut out and keep or specify the
+edges to crop off and discard, or a combination.
+.PP
+To request edges be cropped off, use options \fB-cropleft\fP,
+\fBcropright\fP, \fBcroptop\fP, and \fB-cropbottom\fP to indicate how many
+rows or columns to discard.
+.PP
+For example, \fB-cropleft=50 -cropright=200\fP means to discard the
+leftmost 50 and rightmost 200 columns.
+.PP
+To specify the rectangle to keep, use \fB-left\fP, \fB-right\fP,
+\fB-top\fP, \fB-bottom\fP, \fB-width\fP, \fB-height\fP, and
+\fB-pad\fP options.
+.PP
+For example, \fB-left=50 -right=200\fP means to keep the 150 columns
+between Columns 50 and 200 inclusive.
+.PP
+You can code any mixture of the options.  What you don't specify defaults.
+Those defaults are in favor of minimal cutting and in favor of cutting the
+right and bottom edges off.  It is an error to overspecify, i.e. to specify
+all three of \fB-left\fP, \fB-right\fP, and \fB-width\fP or \fB-top\fP,
+\fB-bottom\fP, and \fB-height\fP or \fBright\fP as well as
+\fB-cropright\fP.
+.PP
+There is an older way to specify the rectangle to keep: positional
+arguments.  Arguments were the only way available before July 2000, but you
+should not use them in new applications.  Options are easier to remember and
+read, more expressive, and allow you to use defaults.
 .PP
 If you use both options and arguments, the two specifications get
 mixed in an unspecified way.
-.PP
-In any case, remember that you are specifying the rectangle to
-keep, not the bits to discard.  Otherwise, you'll be tempted to
-believe that \fB-right=9\fP means to delete the 9 rightmost columns.
-(It really means keep the stuff up to Column 9 and delete the rest).
-.PP
-To use options, just code any mixture of the \fB-left\fP,
-\fB-right\fP, \fB-top\fP, \fB-bottom\fP, \fB-width\fP, and
-\fB-height\fP options.  What you don't specify defaults.  Those
-defaults are in favor of minimal cutting and in favor of cutting the
-right and bottom edges off.  It is an error to overspecify, i.e. to
-specify all three of \fB-left\fP, \fB-right\fP, and \fB-width\fP or
-\fB-top\fP, \fB-bottom\fP, and \fB-height\fP.
 .PP
 To use arguments, specify all four of the \fIleft\fP,
 \fItop\fP, \fIwidth\fP, and \fIheight\fP arguments.  \fIleft\fP
@@ -112,12 +131,6 @@ Columns left of this get cut out.  If a nonnegative number, it refers
 to columns numbered from 0 at the left, increasing to the right.  If
 negative, it refers to columns numbered -1 at the right, decreasing to
 the left.
-.sp
-To delete \fIN\fP columns at the left edge, specify
-\fB-left=\fP\fIN\fP.
-.sp
-To delete \fIN\fP columns at the right edge, specify
-\fB-right=-\fP\fI-(N+1)\fP.
 
 .TP
 \fB-right=\fP\fIcolnum\fP
@@ -131,10 +144,6 @@ The row number of the topmost row to be in the output.  Rows above
 this get cut out.  If a nonnegative number it refers to rows numbered
 from 0 at the top, increasing downward.  If negative, it refers to
 columns numbered -1 at the bottom, decreasing upward.
-.sp
-To delete \fIN\fP rows at the top, specify \fB-top=\fP\fIN\fP.
-.sp
-To delete \fIN\fP rows at the bottom, specify \fB-bottom=\fP\fI-(N+1)\fP.
 
 .TP
 \fB-bottom=\fP\fIrownum\fP
@@ -151,6 +160,25 @@ The number of rows to be in the output.  Must be positive.
 
 .TP
 \fB-pad\fP
+
+.TP
+\fB-cropleft\fP
+.TP
+\fB-cropright\fP
+.TP
+\fB-croptop\fP
+.TP
+\fB-cropbottom\fP
+These options tell how many rows or columns to crop from the left,
+right, top, or bottom edges, respectively.
+.sp
+The value must not be negative.
+.sp
+These option were new in Netpbm 10.85 (December 2018).  Before that, you
+can achieve the same thing with a negative value for \fB-left\fP, etc.
+Remember to subtract one; e.g. the equivalent of \fB-cropright=1\fP is
+\fB-right=-2\fP.
+  
 If the rectangle you specify is not entirely within the input
 image, \fBpamcut\fP fails unless you also specify \fB-pad\fP.  In
 that case, it pads the output with black up to the edges you specify.
