--- a/man/pbmtextps.1
+++ b/man/pbmtextps.1
@@ -15,12 +15,12 @@ pbmtextps - render text into a PBM image using a postscript interpreter
 [\fB-font\fP \fIfontname\fP]
 [\fB-fontsize\fP \fIfloat\fP]
 [\fB-resolution\fP \fIn\fP]
-[\fB-leftmargin=\fP\fIn\fP
-[\fB-rightmargin=\fP\fIn\fP
-[\fB-topmargin=\fP\fIn\fP
-[\fB-bottommargin=\fP\fIn\fP
-[\fB-ascent=\fP\fIn\fP
-[\fB-descent=\fP\fIn\fP
+[\fB-leftmargin=\fP\fIn\fP]
+[\fB-rightmargin=\fP\fIn\fP]
+[\fB-topmargin=\fP\fIn\fP]
+[\fB-bottommargin=\fP\fIn\fP]
+[\fB-ascent=\fP\fIn\fP]
+[\fB-descent=\fP\fIn\fP]
 [\fB-pad\fP]
 [\fB-crop\fP]
 [\fB-stroke\fP \fIn\fP]
@@ -93,7 +93,7 @@ true of \fB-descent\fP and \fB-bottommargin\fP.
 \fB-pad\fP pads the image on the top and bottom to the where the highest
 and lowest characters in the font would reach, even if you don't have those
 characters in your text.  This is useful if you will generate multiple images
-of text (with multiple invocations of \fBpbmtextps\fP and concatenate them
+of text (with multiple invocations of \fBpbmtextps\fP) and concatenate them
 vertically to create a multiline text image.  \fB-pad\fP makes sure the lines
 in this image are equally spaced.
 .PP
@@ -204,7 +204,7 @@ These options were new in Netpbm 10.75 (June 2016).
 \fB-ascent=\fP\fIn\fP
 .TP
 \fB-descent=\fP\fIn\fP
-These options control the the margins added to the image, measured from
+These options control the margins added to the image, measured from
 the text baseline.  See 
 .UR #margins
 Margins
